# talmud

./: README.md  pyproject.toml
src/talmud/: __init__.py  crew.py  main.py
src/talmud/tools/: emotion_analysis_tool.py  web_search_tool.py
