[tool.poetry]
name = "talmud"
version = "0.1.0"
description = "talmud using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }
langdetect = "^1.0.9"
textblob = "^0.18.0.post0"
deepl = "^1.18.0"
argparse = "^1.4.0"

[tool.poetry.scripts]
talmud = "talmud.main:run"
train = "talmud.main:train"
replay = "talmud.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
